# web-app/backend/openapi.yaml
@@ -16,12 +16,6 @@ paths:
       responses:
         '204':
           description: No response body
-        '501':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: ''
   /api/auth/login/:
     post:
       operationId: auth_login
@@ -51,13 +45,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: ''
-        '429':
+        '403':
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
           description: ''
-        '501':
+        '429':
           content:
             application/json:
               schema:
@@ -74,12 +68,6 @@ paths:
       responses:
         '204':
           description: No response body
-        '501':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-          description: ''
   /api/auth/me/:
     get:
       operationId: auth_me
@@ -94,12 +82,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Me'
-          description: ''
-        '501':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
           description: ''
   /api/captures/:
     post:
@@ -1218,8 +1200,10 @@ components:
       properties:
         username:
           type: string
+          maxLength: 150
         password:
           type: string
+          maxLength: 4096
       required:
       - password
       - username
